--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="footer-list">
             <ul>
-                <li>Privacy/policy</li>
+                <li>Privacy Policy</li>
                 <li>Community</li>
                 <li>About us</li>
             </ul>
