--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="nav-container">
-        <img class="logo" src="img/pomelo-logo.png">
+        <img class="logo" src="img/pomel0-primary.png">
         <ul class="nav-items">
                 <li href="#">Inside Pomelo</li>
                 <li href="#">Settings</li>
@@ -23,7 +23,7 @@
     </div>
     <!-- responsive NAV -->
     <div class="responsive-nav-pic">
-            <img class="logo" src="img/pomelo-logo.png"/> 
+            <img class="logo-responsive" src="img/pomel0-primary.png"/> 
         </div> 
         
             <div class='burger-open' onClick="openNav()">
@@ -69,7 +69,7 @@
 
     <footer class="footer">
         <div>
-            <img class="footer-logo" src="img/pomelo-logo.png"/> 
+            <img class="footer-logo" src="img/pomelo-footer.png"/> 
         </div>
         <div class="icon-box">
                 <i class="fab fa-instagram fa-2x"></i>
