--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="nav-container">
-        <img class="logo" src="img/pomelo-1.png">
+        <img class="logo" src="img/pomelo-primary.png">
         <ul class="nav-items">
                 <li href="#">Inside Pomelo</li>
                 <li href="#">Settings</li>
@@ -23,7 +23,7 @@
     </div>
     <!-- responsive NAV -->
     <div class="responsive-nav-pic">
-            <img class="logo-responsive" src="img/pomelo-1.png"/> 
+            <img class="logo-responsive" src="img/pomelo-primary.png"/> 
         </div> 
         
             <div class='burger-open' onClick="openNav()">
