added universal css file

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <h1 class="header">Reset your password</h1>
         <p class="reset-heading">Enter the email you use for your Pomelo Account</p>
 
-		<form name="loginform" id="loginform" action="https://pomelotravel.com/wp-login.php" method="post">
+		<form name="loginform" id="loginform">
 			
 			<div class="login-username">
-				<h5 class="username-label" for="user_login">Username or Email Address</h5><br>
+				<h5 class="username-label" for="user_login"> Email Address</h5><br>
 				<input type="text" name="log" id="user_login" class="input" value="" size="20">
 			</div>
 		
