added better logged out

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </div>
    
     <div class="container">
+            <p class="logout-message">Your Account Has Been Logged Out!</p>
         <h1 class="header">Reset your password</h1>
         <p class="reset-heading">Enter the email you use for your Pomelo Account</p>
 
